[tool.poetry]
name = "hours"
version = "0.1.0"
description = "Log working hours"
authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hours"},
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
typer = "^0.9.0"
xlsxwriter = "^3.1.9"

[tool.poetry.scripts]
hours = "hours.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
