[tool.poetry]
name = "hours"
version = "0.1.0"
description = "Log working hours"
authors = ["Gyorgy Orosz <gyorgy@orosz.link>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "hours"},
]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.0"
typer = "^0.9.0"
xlsxwriter = "^3.1.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ruff = "^0.1.6"
pytest = "^7.4.3"

[tool.poetry.scripts]
hours = "hours.cli:app"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
